# OPENCLNGINE

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/core/: buffer.hpp  buffer.hxx  commandQueue.hpp  context.hpp  context.hxx  device.hpp  kernel.hpp  kernel.hxx  platform.hpp  program.hpp
include/exception/: failure.hpp  helper.hpp  not.hpp  out.hpp  unknow.hpp
include/exceptions/: failure.hpp  iexception.hpp  invalid.hpp  not.hpp  out.hpp  unknow.hpp
openclngine/core/: buffer.hpp  buffer.hxx  context.hpp  context.hxx  kernel.cpp  kernel.hxx  platform.cpp  program.cpp  program.hpp
openclngine/exception/: helper.cpp  helper.hpp  iexception.cpp  iexception.hpp  invalid.cpp  invalid.hpp  unknow.cpp
src/: openclngine.cpp  titane.cpp
src/core/: commandQueue.cpp  context.cpp  device.cpp  kernel.cpp  platform.cpp  program.cpp
src/exception/: failure.cpp  not.cpp  out.cpp
src/exceptions/: failure.cpp  iexception.cpp  invalid.cpp  not.cpp  out.cpp  unknow.cpp
